--- a/quill.html
+++ b/quill.html
@@ -2,6 +2,9 @@
 <link href="https://cdn.quilljs.com/1.2.3/quill.snow.css" rel="stylesheet">
 
 <!-- Create the editor container -->
+<div id="navigation">
+  <button onclick="jadppf.github.io" name="BackButton" onmouseover="Back to Main Page" >Exit</button>
+</div>
 <div id="editor">
   <p>Hello World!</p>
   <p>Some initial <strong>bold</strong> text</p>
