working on things

--- a/quill.html
+++ b/quill.html
@@ -3,7 +3,7 @@
 
 <!-- Create the editor container -->
 <div id="navigation">
-  <button onclick="jadppf.github.io" name="BackButton" onmouseover="Back to Main Page" >Exit</button>
+  <button onclick="http://jadppf.github.io" name="BackButton" onmouseover="Back to Main Page" >Exit</button>
 </div>
 <div id="editor">
   <p>Hello World!</p>
