--- a/quill.html
+++ b/quill.html
@@ -1,10 +1,47 @@
+<!-- topnav stylesheet -->
+<style>
+  /* Add a black background color to the top navigation */
+  .topnav{
+    background-color: #333;
+    overflow: hidden;
+  }
+
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd
+    color: black;
+  }
+
+  /* Add a color to the active/current link  */
+  .topnav a.active {
+    background-color: #4caf50;
+    color: white;
+  }
+</style>
+
 <!-- Include stylesheet -->
 <link href="https://cdn.quilljs.com/1.2.3/quill.snow.css" rel="stylesheet">
 
-<!-- Create the editor container -->
-<div id="navigation">
-  <button onclick="https://jadppf.github.io" name="BackButton" onmouseover="Back to Main Page" >Exit</button>
+<!-- Create topnav container -->
+<div class="topnav" id="jadppfTopnav">
+  <a href="#home">Home</a>
+  <a href="#quill">Quill</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
 </div>
+
+<!-- Create the editor container -->
 <div id="editor">
   <p>Hello World!</p>
   <p>Some initial <strong>bold</strong> text</p>
