--- a/quill.html
+++ b/quill.html
@@ -35,7 +35,7 @@
 
 <!-- Create topnav container -->
 <div class="topnav" id="jadppfTopnav">
-  <a href="#home">Home</a>
+  <a href="https://jadppf.github.io">Home</a>
   <a href="#quill">Quill</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
