--- a/quill.html
+++ b/quill.html
@@ -2,7 +2,7 @@
 <style>
   /* Add a black background color to the top navigation */
   .topnav{
-    background-color: gray;
+    background-color: chucknorris;
     overflow: hidden;
   }
 
