working on index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Marked in the browser</title>
-  <script src="lib/marked.js"></script>
+  <script src="https://github.com/chjj/marked/blob/master/lib/marked.js"></script>
 
   <!-- topnav stylesheet -->
   <style>
@@ -56,7 +56,7 @@
   <!-- Create topnav container -->
   <div class="topnav" id="jadppfTopnav">
     <a href="https://jadppf.github.io">Home</a>
-    <a href="#quill">Quill</a>
+    <a href="quill.html">Quill</a>
     <a href="#contact">Contact</a>
     <a href="#about">About</a>
   </div>
