--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <!-- Create topnav container -->
   <div class="topnav" id="jadppfTopnav">
     <a href="https://jadppf.github.io">Home</a>
-    <a href="quill.html">Quill</a>
+    <a href="https://jadppf.github.io/quill.html">Quill</a>
     <a href="#contact">Contact</a>
     <a href="#about">About</a>
   </div>
