fixed links and added code

--- a/quill.html
+++ b/quill.html
@@ -36,7 +36,7 @@
 <!-- Create topnav container -->
 <div class="topnav" id="jadppfTopnav">
   <a href="https://jadppf.github.io">Home</a>
-  <a href="#quill">Quill</a>
+  <a href="https://jadppf.github.io/quill.html">Quill</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
 </div>
