--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       color: white;
     }
   </style>
-  <script>
+  <!-- <script>
     document.body.style.display = "none"; //Hide page until it's finished rendering
 
     document.createElement("markdown");
@@ -56,7 +56,7 @@
       md_div.id = "content";
       md_div.innerHTML = marked(md_text)
     }
-  </script>
+  </script> -->
 
 </head>
 <body>
